--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,14 @@
+
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 #cofigurari pentru baza de date
 #localhost inseamna ca baza de date este locala
-spring.datasource.url=jdbc:mysql://localhost:3306/productcategory_db
+spring.datasource.url=jdbc:mysql://localhost:3306/shop_db
 spring.datasource.username=root
 spring.datasource.password=Root12345!
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+jwt.secret = mysecret
 
 #aceasta este o proprietate in plus, care specifica dialectul limbajului SQL
 #fiecare baza de date foloseste limbajul SQL, dar cu un dialect diferit (difera cateva mici elemente de sintaxa)
